added a base.html. contacts.html now has a contact form so .. Next step is to get email added so users can send emails and text message to their state rep.Map has to be added and about pg

--- a/templates/info.html
+++ b/templates/info.html
@@ -188,7 +188,7 @@
           alt="90s Hip-Hop Party"
           src="/Users/kamiarhmotley/Desktop/Beta Test/IMG_4912.PNG"
         />
-
+                         <img alt="90s Party" class="img-fluid mb-3" src="{{ url_for('static', filename='images/90s_party.png') }}">
         <p>
           Come snap back to the 90s with a fun get-together on Saturday night
           featuring R&B and Hip-hop music! The event starts at 6 PM and ends at
