--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -281,9 +281,12 @@
 
 <p class="intro">
     Welcome to the contact page for your state representative. Here, you can find the contact information and
-    reach out to your representative directly. Use the map below to locate your representative's office and
+    reach out to your representative directly. Use the map below to locate your representatives and
     the contact form to send a message. We encourage you to voice your concerns, ask questions, or provide
     feedback on any issues that matter to you.
 </p>
+<div class="social-icons">
+        <a href="https://https://www.facebook.com/gipson.reunion.96?mibextid=JRoKGi" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
 </body>
 </html>
