--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -285,5 +285,8 @@
     the contact form to send a message. We encourage you to voice your concerns, ask questions, or provide
     feedback on any issues that matter to you.
 </p>
-</body>
+    <div class="social-icons">
+        <a href="https://https://www.facebook.com/gipson.reunion.96?mibextid=JRoKGi" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
+</body></body>
 </html>
