--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -288,5 +288,5 @@
     <div class="social-icons">
         <a href="https://https://www.facebook.com/gipson.reunion.96?mibextid=JRoKGi" target="_blank"><i class="fab fa-facebook"></i></a>
     </div>
-</body></body>
+</body>
 </html>
