--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
                 <span>About</span>
             </a>
             <a class="nav-item" href="/info" style="--i:2">
-                <img alt="Info" src="https://via.placeholder.com/40">
+                <img alt="Info" src="{{ url_for('static', filename='images/985F3951-6931-4FD6-8042-52AC0A6945B1_1_201_a.jpeg') }}">
                 <span>Info</span>
             </a>
             <a class="nav-item" href="/contacts" style="--i:3">
@@ -98,11 +98,12 @@
                 <span>Contacts</span>
             </a>
             <a class="nav-item" href="/family_photos_main" style="--i:4">
-                <img alt="Family Photos" src="https://via.placeholder.com/40">
+              <img alt="Info" src="{{ url_for('static', filename='images/thumbnail_IMG_4928 (1).JPG') }}">
+
                 <span>Family Photos</span>
             </a>
             <a class="nav-item" href="/news" style="--i:5">
-                <img alt="News" src="https://via.placeholder.com/40">
+                <img alt="News" src="">
                 <span>News</span>
             </a>
         </div>
