updated background photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,17 @@
     <title>Enhanced Radial Menu</title>
     <style>
         body {
-            background-image: url('{{ url_for('static', filename='images/converted_image.jpeg') }}'); /* Corrected URL for background image */
-            background-size: cover;
-            background-position: center;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-        }
+    background-image: url('{{ url_for('static', filename='images/converted_image.jpeg') }}');
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+}
 
         .navbar-container {
             position: relative;
